add logout method
